1998-09-04  Nuno Ferreira  <nmrf@rnl.ist.utl.pt>

	* hex-document.c: Include <config.h>. Marked strings for
	translation.

	* ui.c: Likewise.

1998-08-15  Jaka Mocnik  <jaka.mocnik@kiss.uni-lj.si>

	* gtkhex.c (draw_shadow): set backing pixmap and clear
	window area of the whole widget. this makes it look prettier
	with pixmap themes ;)
	(render_hex_lines, render_ascii_lines): clear background before
	minimizing displayed lines to at most gh->vis_lines: this way
	the whole display's background is always white.
	(gtk_hex_init): connect draw_shadow() to gtkhex's draw signal.
	unless this is done the shadows arent drawn after, say, changing
	notebook tabs containing gtkhex widgets.
	* gtkhex.c: removed debugging info.
	* gtkhex.h: remove public declaration of gtk_hex_init().
	* main.c: removed the nasty printf() at startup. god knows a
	remainder of what this was...
	
1998-08-06  Jaka Mocnik  <jaka.mocnik@kiss.uni-lj.si>

	* ui.c (create_prefs_dialog), main.c (main), ghex.h:
	honor MDI preferences stuff just implemented in gnome-mdi.
	
1998-07-27  Jaka Mocnik  <jaka.mocnik@kiss.uni-lj.si>

	* ui.c, hex-document.c: use more GNOME_STOCK items.
	
1998-07-26  Jaka Mocnik  <jaka.mocnik@kiss.uni-lj.si>

	* ui.c (create_prefs_dialog): use gtk_notebook_append_page() instead
	of gnome_property_box_append_page().
	
1998-07-06  Jaka Mocnik  <jaka.mocnik@kiss.uni-lj.si>

	* main.c, ui.c: changed some things because of GnomeMDI
	changes.

1998-07-02  Jaka Mocnik  <jaka.mocnik@kiss.uni-lj.si>

	* hex-document.c: changed document menu callbacks because of
	changes in GnomeMDI.
	* callbacks.c (get_search_string): fixed a small bug with capital
	letters in hex values.
	
1998-07-01  Nuno Ferreira  <nmrf@rnl.ist.utl.pt>

	* ghex.desktop: Added Portuguese translation.

1998-06-28  Jaka Mocnik  <jaka.mocnik@kiss.uni-lj.si>

	* gnome-support.c, main.c: now ghex does proper SM. currently
	the only state it saves and restores are open files.
	